Update python dependencies

--- a/docs/notebooks/examples.ipynb
+++ b/docs/notebooks/examples.ipynb
@@ -26,10 +26,10 @@
      "start_time": "2024-06-03T13:19:34.929933500Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-06-03T13:36:43.499805Z",
-     "iopub.status.busy": "2024-06-03T13:36:43.499805Z",
-     "iopub.status.idle": "2024-06-03T13:36:50.037377Z",
-     "shell.execute_reply": "2024-06-03T13:36:50.037377Z"
+     "iopub.execute_input": "2024-06-27T08:30:13.068563Z",
+     "iopub.status.busy": "2024-06-27T08:30:13.068563Z",
+     "iopub.status.idle": "2024-06-27T08:30:17.416625Z",
+     "shell.execute_reply": "2024-06-27T08:30:17.415540Z"
     }
    },
    "outputs": [],
@@ -60,10 +60,10 @@
      "start_time": "2024-06-03T13:19:35.998715900Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-06-03T13:36:50.040343Z",
-     "iopub.status.busy": "2024-06-03T13:36:50.040343Z",
-     "iopub.status.idle": "2024-06-03T13:36:51.506390Z",
-     "shell.execute_reply": "2024-06-03T13:36:51.505463Z"
+     "iopub.execute_input": "2024-06-27T08:30:17.419861Z",
+     "iopub.status.busy": "2024-06-27T08:30:17.418769Z",
+     "iopub.status.idle": "2024-06-27T08:30:19.429162Z",
+     "shell.execute_reply": "2024-06-27T08:30:19.428030Z"
     },
     "scrolled": false
    },
@@ -302,10 +302,10 @@
      "start_time": "2024-06-03T13:19:40.712901100Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-06-03T13:36:51.511405Z",
-     "iopub.status.busy": "2024-06-03T13:36:51.510407Z",
-     "iopub.status.idle": "2024-06-03T13:36:51.522402Z",
-     "shell.execute_reply": "2024-06-03T13:36:51.521545Z"
+     "iopub.execute_input": "2024-06-27T08:30:19.432431Z",
+     "iopub.status.busy": "2024-06-27T08:30:19.432431Z",
+     "iopub.status.idle": "2024-06-27T08:30:19.443677Z",
+     "shell.execute_reply": "2024-06-27T08:30:19.443145Z"
     }
    },
    "outputs": [],
@@ -355,10 +355,10 @@
      "start_time": "2024-06-03T13:19:42.539914300Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-06-03T13:36:51.525852Z",
-     "iopub.status.busy": "2024-06-03T13:36:51.525852Z",
-     "iopub.status.idle": "2024-06-03T13:36:53.179723Z",
-     "shell.execute_reply": "2024-06-03T13:36:53.178763Z"
+     "iopub.execute_input": "2024-06-27T08:30:19.447056Z",
+     "iopub.status.busy": "2024-06-27T08:30:19.447056Z",
+     "iopub.status.idle": "2024-06-27T08:30:21.343651Z",
+     "shell.execute_reply": "2024-06-27T08:30:21.343128Z"
     }
    },
    "outputs": [
@@ -366,7 +366,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ben97726\\Git-Reps\\KIS\\AutoLern\\Drift Detection\\driftgenerator\\.tox\\notebooks\\lib\\site-packages\\sklearn\\linear_model\\_ridge.py:239: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
+      "C:\\Users\\ben97726\\Git-Reps\\KIS\\AutoLern\\Drift Detection\\sid2re\\.tox\\notebooks\\lib\\site-packages\\sklearn\\linear_model\\_ridge.py:239: UserWarning: Singular matrix in solving dual problem. Using least-squares solution instead.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -423,10 +423,10 @@
      "start_time": "2024-06-03T13:19:49.326965Z"
     },
     "execution": {
-     "iopub.execute_input": "2024-06-03T13:36:53.182723Z",
-     "iopub.status.busy": "2024-06-03T13:36:53.182723Z",
-     "iopub.status.idle": "2024-06-03T13:36:54.714651Z",
-     "shell.execute_reply": "2024-06-03T13:36:54.713845Z"
+     "iopub.execute_input": "2024-06-27T08:30:21.349622Z",
+     "iopub.status.busy": "2024-06-27T08:30:21.348466Z",
+     "iopub.status.idle": "2024-06-27T08:30:23.869439Z",
+     "shell.execute_reply": "2024-06-27T08:30:23.868334Z"
     }
    },
    "outputs": [
@@ -488,10 +488,10 @@
     },
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-06-03T13:36:54.716648Z",
-     "iopub.status.busy": "2024-06-03T13:36:54.716648Z",
-     "iopub.status.idle": "2024-06-03T13:36:56.195373Z",
-     "shell.execute_reply": "2024-06-03T13:36:56.194536Z"
+     "iopub.execute_input": "2024-06-27T08:30:23.872663Z",
+     "iopub.status.busy": "2024-06-27T08:30:23.872663Z",
+     "iopub.status.idle": "2024-06-27T08:30:26.846005Z",
+     "shell.execute_reply": "2024-06-27T08:30:26.844717Z"
     }
    },
    "outputs": [
